# mock_medium

./: .gitignore  README.md  pyproject.toml
medium/: db.sqlite3
medium/cms/: models.py  resp.py  urls.py  views.py
medium/cms/migrations/: 0001_initial.py  0002_auto_20200716_1224.py  0003_auto_20200717_1327.py  0004_auto_20200718_0234.py  0005_auto_20200718_0742.py  0006_auto_20200719_0319.py  0007_auto_20200719_0756.py  0008_auto_20200719_1244.py
medium/medium/: settings.py  urls.py
tests/: test_fvt.py
